--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: run
         run: |
-          npm install
+          npm install --omit=dev
           npm run build
 
       - name: deploy
