--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: build
 on:
   push:
     branches:
-      - main
+      - master
   schedule:
     # Run this script every 1 hrs
     #  */m hr day month day_of_week
@@ -24,5 +24,5 @@ jobs:
       - name: deploy
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          branch: gh-pages # The branch the action should deploy to.
-          folder: dist # The folder the action should deploy.
+          branch: gh-pages 
+          folder: dist
