--- a/.github/workflows/github_pages.yml
+++ b/.github/workflows/github_pages.yml
@@ -22,7 +22,7 @@ jobs:
           npm run build
 
       - name: deploy
-        uses: JamesIves/github-pages-deploy-action@v3
+        uses: JamesIves/github-pages-deploy-action@4.1.5
         with:
           branch: gh-pages 
           folder: dist
