--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,5 +24,6 @@ jobs:
       - name: deploy
         uses: JamesIves/github-pages-deploy-action@4.1.5
         with:
+          git-config-email: <>
           branch: gh-pages 
           folder: dist
