--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,6 +24,7 @@ jobs:
       - name: deploy
         uses: JamesIves/github-pages-deploy-action@4.1.5
         with:
+          single-commit: true
           git-config-email: <>
           branch: gh-pages 
           folder: dist
