--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,11 +16,13 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18.15.0
       - name: run
         run: |
           npm install --omit=dev
           npm run build
-
       - name: deploy
         uses: JamesIves/github-pages-deploy-action@4.1.5
         with:
