--- a/package.json
+++ b/package.json
@@ -1,22 +1,15 @@
 {
   "name": "youtube-subs",
   "type": "module",
-  "engines": {
-    "pnpm": "7.5.1"
-  },
   "scripts": {
     "build": "node scripts/build.js",
-    "dev": "node scripts/dev.js"
+    "write": "node scripts/build.js -w",
+    "dev": "node scripts/build.js -d"
   },
   "author": "kevinfiol",
   "license": "MIT",
   "dependencies": {
-    "httpie": "1.1.2",
     "rss-parser": "3.6.3",
     "yeahjs": "0.3.0"
-  },
-  "devDependencies": {
-    "servbot": "0.2.2",
-    "watchlist": "0.3.1"
   }
 }
