--- a/deno.json
+++ b/deno.json
@@ -1,5 +1,25 @@
 {
   "tasks": {
     "build": "deno run -RWNE --env-file main.js"
+  },
+  "lint": {
+    "include": ["**/*.js"],
+    "exclude": [],
+    "rules": {
+      "tags": ["recommended"],
+      "include": [
+        "no-unused-vars"
+      ]
+    }
+  },
+  "fmt": {
+    "useTabs": false,
+    "lineWidth": 80,
+    "indentWidth": 2,
+    "semiColons": true,
+    "singleQuote": true,
+    "proseWrap": "preserve",
+    "include": ["**/*.js"],
+    "exclude": []
   }
 }
