don't format template

--- a/deno.json
+++ b/deno.json
@@ -20,6 +20,6 @@
     "singleQuote": true,
     "proseWrap": "preserve",
     "include": ["**/*.js"],
-    "exclude": []
+    "exclude": ["lib/template.js"]
   }
 }
